# BioX

./: .flake8  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_REQUIREMENTS.txt  Makefile  README.md  README_PUBLISHING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/biox/: __init__.py
src/bioxai/: __init__.py
src/bioxai/logger/: log.py
src/bioxai/models/: data_model.py
src/bioxai/utilities/: files_finder.py  multi_proc.py  unzip_files.py
tests/: test_core.py
